[workspace]
members  = ["crates/*"]
resolver = "2"

    [workspace.package]
    authors    = ["magic-akari <akari.ccino@gmail.com>"]
    edition    = "2021"
    homepage   = "https://github.com/wasm-fmt/web_fmt"
    license    = "MIT"
    readme     = "README.md"
    repository = "https://github.com/wasm-fmt/web_fmt"
    version    = "0.1.12"


    [workspace.dependencies]
    biome_fmt = { path = "crates/biome_fmt", version = "0.1.12", default-features = false }
    common    = { path = "crates/common", version = "0.1.12" }
    json_fmt  = { path = "crates/json_fmt", version = "0.1.12", default-features = false }

    biome_formatter      = { version = "0.5.7" }
    biome_js_formatter   = { version = "0.5.7" }
    biome_js_parser      = { version = "0.5.7" }
    biome_js_syntax      = { version = "0.5.7" }
    biome_json_formatter = { version = "0.5.7" }
    biome_json_parser    = { version = "0.5.7" }
    biome_json_syntax    = { version = "0.5.7" }

    malva      = "0.11.0"
    markup_fmt = "0.14.0"

    serde              = "1.0"
    serde-wasm-bindgen = "0.6"
    serde_json         = "1.0"
    wasm-bindgen       = "0.2.93"

[profile.release]
codegen-units = 4
debug         = false     # set to `true` for debug information
lto           = true
opt-level     = "s"
panic         = "abort"   # Let it crash and force ourselves to write safe Rust.
strip         = "symbols" # set to `false` for debug information
