[workspace]
members  = ["crates/*"]
resolver = "2"

    [workspace.package]
    authors    = ["magic-akari <akari.ccino@gmail.com>"]
    edition    = "2021"
    homepage   = "https://github.com/wasm-fmt/web_fmt"
    license    = "MIT"
    readme     = "README.md"
    repository = "https://github.com/wasm-fmt/web_fmt"
    version    = "0.1.14"


    [workspace.dependencies]
    biome_fmt = { path = "crates/biome_fmt", version = "0.1.14", default-features = false }
    common    = { path = "crates/common", version = "0.1.14", default-features = false }
    json_fmt  = { path = "crates/json_fmt", version = "0.1.14", default-features = false }
    malva_fmt = { path = "crates/malva_fmt", version = "0.1.14", default-features = false }
    oxc_fmt   = { path = "crates/oxc_fmt", version = "0.1.14", default-features = false }

    biome_formatter      = { git = "https://github.com/biomejs/biome", tag = "@biomejs/biome@2.3.9" }
    biome_js_formatter   = { git = "https://github.com/biomejs/biome", tag = "@biomejs/biome@2.3.9" }
    biome_js_parser      = { git = "https://github.com/biomejs/biome", tag = "@biomejs/biome@2.3.9" }
    biome_js_syntax      = { git = "https://github.com/biomejs/biome", tag = "@biomejs/biome@2.3.9" }
    biome_json_formatter = { git = "https://github.com/biomejs/biome", tag = "@biomejs/biome@2.3.9" }
    biome_json_parser    = { git = "https://github.com/biomejs/biome", tag = "@biomejs/biome@2.3.9" }
    biome_json_syntax    = { git = "https://github.com/biomejs/biome", tag = "@biomejs/biome@2.3.9" }

    malva      = "0.15.0"
    markup_fmt = "0.25.0"

    # OXC - experimental, using git dependency since oxc_formatter is not published
    oxc_allocator = { git = "https://github.com/oxc-project/oxc", tag = "oxfmt_v0.18.0" }
    oxc_formatter = { git = "https://github.com/oxc-project/oxc", tag = "oxfmt_v0.18.0" }
    oxc_parser    = { git = "https://github.com/oxc-project/oxc", tag = "oxfmt_v0.18.0" }
    oxc_span      = { git = "https://github.com/oxc-project/oxc", tag = "oxfmt_v0.18.0" }

    serde              = "1.0"
    serde-wasm-bindgen = "0.6"
    serde_json         = "1.0"
    wasm-bindgen       = "0.2.99"

[profile.release]
codegen-units = 4
debug         = false     # set to `true` for debug information
lto           = true
opt-level     = "s"
panic         = "abort"   # Let it crash and force ourselves to write safe Rust.
strip         = "symbols" # set to `false` for debug information
