[package]
name = "common"

authors.workspace    = true
edition.workspace    = true
homepage.workspace   = true
license.workspace    = true
repository.workspace = true
version.workspace    = true


[dependencies]
biome_formatter = { workspace = true, optional = true }
serde           = { workspace = true, features = ["derive"], optional = true }
wasm-bindgen    = { workspace = true, optional = true }

[lib]
crate-type = ["cdylib", "rlib"]
