[package]
description = "JSON formatter powered by WASM ported from Biome"
keywords    = ["wasm", "formatter", "json", "biome"]
name        = "json_fmt"

authors.workspace    = true
edition.workspace    = true
homepage.workspace   = true
license.workspace    = true
publish              = true
repository.workspace = true
version.workspace    = true


[features]
default = ["main"]
main    = ["wasm-bindgen", "serde-wasm-bindgen", "common/wasm-bindgen"]

[dependencies]
common = { workspace = true, features = ["biome_formatter", "serde"] }

biome_formatter      = { workspace = true }
biome_json_formatter = { workspace = true }
biome_json_parser    = { workspace = true }
biome_json_syntax    = { workspace = true }

serde              = { workspace = true, features = ["derive"] }
serde-wasm-bindgen = { workspace = true, optional = true }
serde_json         = { workspace = true, features = ["preserve_order"] }
wasm-bindgen       = { workspace = true, optional = true }


[lib]
crate-type = ["cdylib", "rlib"]
