[package]
description = "HTML/Vue/Svelte/Astro/Jinja/Twig formatter powered by WASM"
keywords    = ["wasm", "formatter", "html", "vue", "svelte", "astro", "markup_fmt"]
name        = "markup_fmt"

authors.workspace    = true
edition.workspace    = true
homepage.workspace   = true
license.workspace    = true
publish              = true
repository.workspace = true
version.workspace    = true

    [package.metadata.wasm-pack.profile.release]
    wasm-opt = [
        "-Os",
        "--enable-bulk-memory",
        "--enable-nontrapping-float-to-int",
    ]


[features]
default = ["main"]
main    = ["wasm-bindgen", "serde-wasm-bindgen", "common/wasm-bindgen"]

[dependencies]
common      = { workspace = true, features = ["serde"] }
markup_fmt_core = { workspace = true }

serde              = { workspace = true, features = ["derive"] }
serde-wasm-bindgen = { workspace = true, optional = true }
wasm-bindgen       = { workspace = true, optional = true }


[lib]
crate-type = ["cdylib", "rlib"]
