[package]
authors.workspace     = true
description.workspace = true
edition.workspace     = true
homepage.workspace    = true
keywords.workspace    = true
license.workspace     = true
name                  = "rome_fmt"
publish               = true
repository.workspace  = true
version.workspace     = true

[dependencies]
rome_formatter     = { workspace = true }
rome_js_formatter  = { workspace = true }
rome_js_parser     = { workspace = true }
rome_js_syntax     = { workspace = true }
serde              = { workspace = true, features = ["derive"] }
serde-wasm-bindgen = "0.5"
serde_json         = { workspace = true, features = ["preserve_order"] }
wasm-bindgen       = { workspace = true }

[dev-dependencies]
testing_macros = "0.2.11"

[lib]
crate-type = ["cdylib", "rlib"]
