[package]
description = "a formatter for web development powered by wasm"
keywords    = ["wasm", "formatter", "html", "css", "javascript"]
name        = "web_fmt"

authors.workspace    = true
edition.workspace    = true
homepage.workspace   = true
license.workspace    = true
publish              = true
repository.workspace = true
version.workspace    = true

[dependencies]
biome_fmt = { workspace = true, default-features = false }
common = { workspace = true, features = [
    "biome_formatter",
    "serde",
    "wasm-bindgen",
] }
json_fmt = { workspace = true, default-features = false }
malva = { version = "0.1.5", features = ["config_serde"] }
markup_fmt = { version = "0.6.0", features = ["config_serde"] }
serde = { workspace = true, features = ["derive"] }
serde-wasm-bindgen = { workspace = true }
serde_json = { workspace = true, features = ["preserve_order"] }
wasm-bindgen = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]
